# es-ibis

./: Cargo.toml
eve-proto/: Cargo.toml
eve-proto/src/: decode.rs  lib.rs  opcodes.rs  string_table.rs  value.rs
eve-proto/src/tests/test_data/: mod.rs
src/: main.rs
src/net/: client.rs  connection_manager.rs  mod.rs  server.rs  socket.rs
