[workspace]
members = ["eve-proto"]

[workspace.package]
version = "0.0.0"
authors = ["Dreae"]
description = "EVE server implementation"

[workspace.dependencies]
log = "0.4.17"

[package]
name = "dreaemu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
fern = { version = "0.6", features = ["colored"] }
humantime = "2.1.0"

tokio = { version = "1.28.0", features = ["full"] }

eve-proto = { path = "eve-proto" }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-actix-native-tls"] }